--- a/blog/theme/css/franticworld.css
+++ b/blog/theme/css/franticworld.css
@@ -125,6 +125,7 @@ background-color:#222;
 box-shadow:0px 0px 1px #222;
 padding-left:10px;
 border-left:2px solid #2fa0ff;
+overflow:auto;
 }
 blockquote{
 margin-left:0;
@@ -141,7 +142,21 @@ code{
 font-weight:bold;
 padding-left:2px;
 padding-right:2px;
-background:#888888}
+background:#888888
+}
+table{
+font-size:12px;
+line-height:18px;
+background-color:transparent;
+width:100%;
+overflow:auto;
+}
+tr:nth-child(odd){background-color:rgba(255,255,255,0.2);}
+tr:nth-child(even){background-color:rgba(140,203,255,0.2);}
+li{
+font-size:12px;
+list-style-type : square;
+}
 .sidebar{
 position:absolute;
 display:inline-block;
