--- a/blog/theme/css/franticworld.css
+++ b/blog/theme/css/franticworld.css
@@ -91,7 +91,7 @@ transition: text-shadow 0.5s;
 text-shadow:0 0 10px #2fa0ff;
 }
 
-.arcticlecontentbox{
+.arcticlecontentbox,.page-body{
 display:inline-block;
 width:50em;
 background-color:rgba(255,255,255,0.6);
@@ -118,6 +118,8 @@ text-align:center;
 background:rgba(140,203,255,0.5);
 box-shadow:0 0 2px black;
 }
+.page-body h1{text-shadow:1px 1px 1px;}
+.page-body h2{}
 pre,blockquote{
 color:#eee;
 padding:5px;
