--- a/blog/theme/css/franticworld.css
+++ b/blog/theme/css/franticworld.css
@@ -59,23 +59,29 @@ margin-left:-4px;
 padding:1em;
 box-shadow:0px 0px 10px #000000;
 color:#222;
-text-shadow:1px 1px 0px rgba(255,255,255,0.2);
 }
 .summarytitle,.articletitle{
 display:block;
-width:790px;
-margin-top:-25px;
-margin-left:-25px;
+width:770px;
 padding:5px;
+margin-top:-15px;
+margin-left:-15px;
 padding-top:10px;
 padding-bottom:15px;
 font-size:30px;
 font-weight:bold;
 text-align:center;
 color:#eee;
-text-shadow:1px 1px 2px #333,-1px -1px 5px #333,20px 15px 2px rgba(255,255,255,0.1),-20px 15px 2px rgba(255,255,255,0.1),20px -10px 2px rgba(255,255,255,0.1),-20px -10px 2px rgba(255,255,255,0.1);
-box-shadow:0 1px 5px rgba(0,0,0,0.8);
-background:rgba(48,48,48,1);
+text-shadow:1px 1px 0px #000,-1px -1px 0px #000;
+box-shadow:0 2px 10px black;
+background: rgb(149,149,149); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(149,149,149,1) 0%, rgba(13,13,13,1) 46%, rgba(1,1,1,1) 50%, rgba(10,10,10,1) 53%, rgba(78,78,78,1) 76%, rgba(56,56,56,1) 87%, rgba(27,27,27,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(149,149,149,1)), color-stop(46%,rgba(13,13,13,1)), color-stop(50%,rgba(1,1,1,1)), color-stop(53%,rgba(10,10,10,1)), color-stop(76%,rgba(78,78,78,1)), color-stop(87%,rgba(56,56,56,1)), color-stop(100%,rgba(27,27,27,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(149,149,149,1) 0%,rgba(13,13,13,1) 46%,rgba(1,1,1,1) 50%,rgba(10,10,10,1) 53%,rgba(78,78,78,1) 76%,rgba(56,56,56,1) 87%,rgba(27,27,27,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(149,149,149,1) 0%,rgba(13,13,13,1) 46%,rgba(1,1,1,1) 50%,rgba(10,10,10,1) 53%,rgba(78,78,78,1) 76%,rgba(56,56,56,1) 87%,rgba(27,27,27,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(149,149,149,1) 0%,rgba(13,13,13,1) 46%,rgba(1,1,1,1) 50%,rgba(10,10,10,1) 53%,rgba(78,78,78,1) 76%,rgba(56,56,56,1) 87%,rgba(27,27,27,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(149,149,149,1) 0%,rgba(13,13,13,1) 46%,rgba(1,1,1,1) 50%,rgba(10,10,10,1) 53%,rgba(78,78,78,1) 76%,rgba(56,56,56,1) 87%,rgba(27,27,27,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#959595', endColorstr='#1b1b1b',GradientType=0 ); /* IE6-9 */
 transition: text-shadow 0.5s;
 -moz-transition: text-shadow 0.5s; /* Firefox 4 */
 -webkit-transition: text-shadow 0.5s; /* Safari 和 Chrome */
@@ -94,28 +100,23 @@ margin-left:-4px;
 padding:1em;
 box-shadow:0px 0px 10px #000000;
 color:#222;
-text-shadow:1px 1px 0px rgba(255,255,255,0.2);
 }
 h1{
-padding-top:5px;
-padding-bottom:5px;
 padding-left:10px;
 margin-left:-20px;
-background:rgba(140,203,255,0.2);
-text-shadow:0 0 10px rgba(255,255,255,0.5);
+background:rgba(140,203,255,0.8);
 width:780px;
 height:1.2em;
+text-shadow:1px 1px 1px;
 text-align:center;
-box-shadow:1px 1px 2px rgba(48,168,200,1);
+box-shadow:1px 1px 2px black;
 }
 h2{
-padding:3px;
+padding:5px;
 font-size:28px;
 text-align:center;
-margin-left:30px;
-margin-right:30px;
-background:rgba(155,155,155,0.5);
-box-shadow:0 0 2px rgba(0,0,0,0.4);
+background:rgba(140,203,255,0.5);
+box-shadow:0 0 2px black;
 }
 pre,blockquote{
 color:#eee;
