--- a/blog/theme/css/franticworld.css
+++ b/blog/theme/css/franticworld.css
@@ -177,10 +177,22 @@ font-weight:bold;
 line-height:28px;
 color:#2fa0ff;
 font-size:16px;
+display:block;
+width:100%;
+padding:3px;
+padding-left:5px;
 }
 .sidebar a:hover{
-font-size:18px;
+font-size:20px;
 font-weight:bold;
+color:#eee;
+padding-left:18px;
+border-radius:2px 0 0 2px;
+box-shadow:0px 0px 20px rgba(140,203,255,0.7);
+background:rgba(140,203,255,1);
+-moz-transition: font-size 0.2s; /* Firefox 4 */
+-webkit-transition:font-size 0.2s; /* Safari 和 Chrome */
+-o-transition:font-size 0.2s; /* Opera */
 }
 #about{
 display:block;
