--- a/blog/theme/css/franticworld.css
+++ b/blog/theme/css/franticworld.css
@@ -1,16 +1,20 @@
+@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro|Kelly+Slab|Atomic+Age|Jim+Nightshade);
+
 body{
 font-size:15px;
 font-family:arial;
+font-family:kelly slab;
 }
 a{text-decoration:none}
 .nav-banner{
 display:block;
 width:auto;
 height:50px;
-font-size:42px;
+font-size:64px;
 margin-top:20px;
 margin-bottom:40px;
 text-align:center;
+font-family:jim nightshade;
 }
 .nav-banner>a{
 color:white;
@@ -39,6 +43,7 @@ box-shadow:0px 0px 10px #000000;
 z-index:-1;
 }
 .metaday{
+font-weight:bold;
 font-size:26px;
 text-shadow:0 0 10px #ff1f99;
 }
@@ -138,6 +143,7 @@ line-height:18px;
 background-color:transparent;
 }
 code{
+font-family:sourcecode pro;
 font-weight:bold;
 padding-left:2px;
 padding-right:2px;
@@ -174,6 +180,7 @@ font-weight:bold;
 }
 .sidebar li{list-style-type : none;}
 .sidebar a{
+font-family:atomic age;
 line-height:28px;
 color:#2fa0ff;
 font-size:16px;
@@ -194,8 +201,29 @@ background:rgba(140,203,255,1);
 -webkit-transition:font-size 0.2s; /* Safari 和 Chrome */
 -o-transition:font-size 0.2s; /* Opera */
 }
+.paginator{
+border-radius:2px;
+padding:10px;
+color:#fff;
+font-family:jim nightshade;
+margin-top:-1em;
+text-align:center;
+font-size:2em;}
+.paginator>a{
+color:#2f99ff;
+font-family:kelly slab;
+text-shadow:0 0 10px white,0 0 15px white,0 0 20px white,0 0 25px white;
+}
+.paginator>a:before{
+content:" ";
+display:inline-block;
+margin-left:20px;
+height:10px;
+width:10px;
+background-color:transparent;
 #about{
+font-size:1.5em;
 display:block;
 text-align:center;
 color:#ccc;}
-#about a{text-decoration:underline;color:#ccc;}
+#about a{text-decoration:underline;color:#ccc;font-family:jim nightshade;}
