--- a/stylesheets/_response.scss
+++ b/stylesheets/_response.scss
@@ -1,10 +1,3 @@
-@media all and (max-width: 1200px){
-  body{
-    background:black;
-  }
-  #tltle{
-    font-size:5em;
-  }
-}
+//@media all and (max-width: 1200px){}
 //@media print, screen and (max-width: 720px){}
 //@media print, screen and (max-width: 480px){}
